--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sensible-sdk",
   "version": "0.1.0",
   "description": "Sensible-SDK",
-  "main": "",
+  "main": "src/index.js",
   "engines": {
     "node": ">=12.0.0"
   },
