--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "node": ">=12.0.0"
   },
   "scripts": {
-    "watch": "node watcher.js",
-    "gen-desc": "node watcher.js --gen-desc",
-    "build": "webpack"
+    "compile-bcp01": "node tools/compiler.js --bcp01",
+    "compile-bcp01-dev": "node tools/compiler.js --bcp01 --debug",
+    "compile-bcp02": "node tools/compiler.js --bcp02",
+    "compile-bcp02-dev": "node tools/compiler.js --bcp02  --debug",
+    "build": "npx gulp"
   },
   "keywords": [
     "sCrypt",
@@ -23,10 +25,25 @@
   "license": "MIT",
   "dependencies": {
     "glob": "^7.1.6",
-    "html-webpack-plugin": "^5.3.1",
     "lodash": "=4.17.11",
     "request": "^2.88.2",
-    "scryptlib": "^0.3.10",
-    "watch": "^1.0.2"
+    "scryptlib": "=0.3.10"
+  },
+  "devDependencies": {
+    "browserify": "^17.0.0",
+    "chai": "^4.3.4",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-typescript": "*",
+    "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^5.3.1",
+    "standalonify": "^0.1.3",
+    "tsify": "^5.0.4",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watch": "^1.0.2",
+    "watchify": "^4.0.0"
   }
 }
