--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sensible-sdk",
   "version": "1.0.0",
   "description": "Sensible-SDK",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -39,6 +39,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "html-webpack-plugin": "^5.3.1",
+    "merge2": "^1.4.1",
     "standalonify": "^0.1.3",
     "tsify": "^5.0.4",
     "vinyl-buffer": "^1.0.1",
