--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.1",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
+  "browser": "dist/index.browser.js",
   "engines": {
     "node": ">=12.0.0"
   },
