--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.88.2",
-    "scryptlib": "=0.3.10"
+    "scryptlib": "^0.4.1"
   },
   "devDependencies": {
     "browserify": "^17.0.0",
