fix buffer in browser

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "sensiblecontract.org",
   "license": "MIT",
   "dependencies": {
+    "buffer": "^6.0.3",
     "request": "^2.88.2",
     "scryptlib": "^0.4.1",
     "zlib": "^1.0.5"
