--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "5.0.7",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
-  "browser": "dist/index.browser.js",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -26,7 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.88.2",
-    "scryptlib": "^0.4.1",
+    "scryptlib": "^0.4.2-beta1",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
