--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sensible-sdk",
-  "version": "5.0.8",
+  "version": "5.0.9-0",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
   "engines": {
