--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "sourceMap": true,
     "declaration": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/index.browser.ts"]
 }
