--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-util": "^3.0.8",
     "html-webpack-plugin": "^5.3.1",
     "merge2": "^1.4.1",
+    "mocha": "^9.0.2",
     "standalonify": "^0.1.3",
     "tsify": "^5.0.4",
     "vinyl-buffer": "^1.0.1",
