--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.20",
     "@types/mocha": "^8.2.2",
     "browserify": "^17.0.0",
     "chai": "^4.3.4",
