--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sensible-sdk",
-  "version": "7.2.5-beta.1",
+  "version": "7.2.6",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
   "engines": {
