--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sensible-sdk",
-  "version": "7.3.1",
+  "version": "7.3.2",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
   "engines": {
@@ -28,13 +28,15 @@
   "author": "sensiblecontract.org",
   "license": "MIT",
   "dependencies": {
+    "bsv": "1.5.6",
+    "minimist": "1.2.5",
     "request": "^2.88.2",
-    "scryptlib": "^0.4.2-beta1",
-    "minimist": "1.2.5"
+    "scryptlib": "^0.4.6"
   },
   "devDependencies": {
     "@types/chai": "^4.2.20",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^17.0.0",
     "browserify": "^17.0.0",
     "chai": "^4.3.4",
     "glob": "^7.1.7",
@@ -49,7 +51,9 @@
     "merge2": "^1.4.1",
     "mocha": "^9.0.2",
     "standalonify": "^0.1.3",
+    "ts-node": "^10.4.0",
     "tsify": "^5.0.4",
+    "typescript": "^4.5.4",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watch": "^1.0.2",
