--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "sensible-sdk",
-  "version": "7.3.2",
+  "version": "7.3.3-beta.4",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
+  "browser": "dist/sensible.browser.min.js",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -38,6 +39,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^17.0.0",
     "browserify": "^17.0.0",
+    "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "glob": "^7.1.7",
     "gulp": "^4.0.2",
