--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sensible-sdk",
-  "version": "7.3.7",
+  "version": "7.4.0-beta.2",
   "description": "Sensible-SDK",
   "main": "dist/index.js",
   "browser": "dist/sensible.browser.min.js",
